k8s/client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
     labels:
       app: client
    spec:
      containers:
        - image: client:1.0
          imagePullPolicy: Never
          name: client
          ports:
            - containerPort: 80
